--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
         <spring-boot.version>2.7.12</spring-boot.version>
         <spring.version>5.3.27</spring.version>
+        <jsonassert.version>2.0-rc1</jsonassert.version>
     </properties>
 
     <dependencies>
@@ -83,8 +84,6 @@
             <version>1.39.0</version>
         </dependency>
 
-
-
         <!-- test -->
         <dependency>
             <groupId>junit</groupId>
@@ -96,6 +95,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>5.12.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <version>${jsonassert.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
